
0.03301 Thu Nov 20 17:32:53 MET 1997

	Handling null numeric fields (John D Groenveld). Changed
	"look for error" test in header.t to be OS portable. Fixed bug
	in decode_version_info (dbtflag). Fixed bug with field length
	in XBase::create, spotted by Risto Wichman.

0.032 Thu Nov  6 16:27:10 MET 1997

	Fixed bugs: test on "\r" in read_header; check of record
	number in delete and undelete (spotted by Frans van Loon).
	Added methods field_lengths and field_decimals and changed
	*_on_read in [NF] section (spotted by John D Groenveld).

0.031 Thu Oct 30 19:47:37 MET 1997

	Fixed bug in docs about write_record. Changed format of
	get_field_info to include field number. Fixed bug with decimals.

0.03 Mon Oct 27 23:23:17 MET 1997					(*****)

	Minor bug fixes. XBase::create added. Tests extended. Module
	released on CPAN.
	
0.029 Fri Oct 24 19:34:32 MET DST 1997

	Bug fixes. Added methods for writing dbt files.

	The writing methods are now set_record, set_record_hash and
	update_record.

0.024 Mon Oct 20 22:17:44 MET DST 1997

	The original release. Includes XBase that reads dbf and dbt
	and writes dbf (but not dbt). Put on CPAN mainly for other
	people to test and comment.

---

Note: Versions tagged (*****) were major updates and code changes.

I have been using the Xbase(3) module by Pratap Pereira for quite
a time to read the dbf files, but it had no writing capabilities, it
was not use strict clean and the author did not support the module
behind the version 1.07. So I started to make my own patches and
thought it would be nice if other people could make use of them.
I thought about taking over the development of the original Xbase
package, but the interface seemed rather complicated to me.

So with the help of article XBase File Format Description by Erik
Bachmann on URL

	http://www.e-bachmann.dk/docs/xbase.htm

I have written a new module. It doesn't use any code from Xbase-1.07
and you are free to use and distribute it under the same terms as Perl
itself.
