@@ -1,9 +1,21 @@
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         DBD-XBase
-version:      0.234
-version_from: lib/DBD/XBase.pm
-installdirs:  site
-requires:
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.10_04
+--- #YAML:1.0
+name:               DBD-XBase
+version:            1.00
+abstract:           Reads and writes XBase (dbf) files, includes DBI support
+author:
+    - Jan Pazdziora
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:  {}
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.55_02
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
