@@ -94,12 +94,15 @@ If it works for you:
 
 
 Available:
-	http://www.fi.muni.cz/~adelton/perl/ and from your favorite
+	http://www.adelton.com/perl/DBD-XBase/ and from your favorite
 	CPAN site in the authors/id/JANPAZ/ directory.
 
+	Contact the author at jpx dash perl at adelton dot com.
 
-Copyright: (c) 1997--2003 Jan Pazdziora, adelton@fi.muni.cz. All rights
-	reserved. This package is free software; you can redistribute
-	it and/or modify it under the same terms as Perl itself.
+
+Copyright: (c) 1997--2011 Jan Pazdziora.
+	All rights reserved. This package is free software; you can
+	redistribute it and/or modify it under the same terms as Perl
+	itself.
 
 
