@@ -52,6 +52,4 @@ people will demand the feature, offer help):
 --
 
 Jan Pazdziora
-adelton@fi.muni.cz
-http://www.fi.muni.cz/~adelton/
 
