@@ -26,8 +26,8 @@ The primary goals are:
 
 This driver summary is for DBD::XBase version 0.130.
 
-The driver author is Jan Pazdziora and he can be contacted via his
-e-mail adelton@fi.muni.cz or the dbi-users mailing list.
+The driver author is Jan Pazdziora and he can be contacted at
+jpx dash perl at adelton dot com.
 
 =head2 Supported Database Versions and Options
 
@@ -441,7 +441,7 @@ current DBI specification.
 
 =head2 URLs to more database/driver specific information
 
-  http://www.e-bachmann.dk/docs/xbase.htm
+  http://www.clicketyclick.dk/databases/xbase/format/
 
 
 =head2 Multiple concurrent database connections
