@@ -90,5 +90,4 @@ third parameter in the first anonymous array, like
 --
 
 Jan Pazdziora
-adelton@fi.muni.cz
 
